--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,10 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: tickets_production
   username: tickets
   password: <%= ENV['TICKETS_DATABASE_PASSWORD'] %>
+
